--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 </head>
 <body>
   
+  <!-- Header -->
+  <header>
+    <h1>Il mio viaggio a Londra</h1>
+    <img src="img/ruota-panoramica.jpg" alt="ruota-panoramica" title="London Eye">
+    <img src="img/fiume.jpg" alt="fiume" title="Tamigi">
+    <img src="img/big-ben.jpg" alt="big-ben" title="Big Ben">
+    <hr>
+  </header>
 </body>
 </html>
