[add] second section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               120&euro;
             </td>
           </tr>
-          
+
           <tr>
             <td>
               Totale
@@ -93,6 +93,17 @@
     </section>
     <!-- Fine Tabella -->
     <hr>
+
+    <!-- To do list -->
+    <section>
+      <h2>Cose da fare</h2>
+      <ul>
+        <li>Visitare la Tower of London &#10006; </li>
+        <li>Visitare Greenwich &#10004; </li>
+        <li>Ascoltare un artista di strada a Covent Garden &#10004; </li>
+        <li>Mangiare il tipico fish&chips inglese &#10006; </li>
+      </ul>
+    </section>
   </main>
 </body>
 </html>
