[add] third section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,57 @@
         <li>Mangiare il tipico fish&chips inglese &#10006; </li>
       </ul>
     </section>
+    <hr>
+
+    <!-- Info -->
+    <section>
+      <h2>Info utili</h2>
+      <ul>
+        <li>Numeri utili di emergenza
+          <ol>
+            <li>
+              <strong>999</strong> -
+              Numero di emergenza
+            </li>
+            <li>
+              <strong>101</strong> -
+              Numero polizia
+            </li>
+            <li>
+              <strong>111</strong> -
+              Numero assistenza medica
+            </li>
+          </ol>
+        </li>
+
+        <li> Hotel
+          <ol>
+            <li>
+              <strong>Nome Hotel</strong> :
+              Buckingham Palace
+            </li>
+            <li>
+              <strong>Indirizzo Hotel</strong> :
+              Westminster, London SW1A 1AA, Regno Unito
+            </li>
+          </ol>
+        </li>
+
+        <li> Aereo
+          <ol>
+            <li>
+              <strong>Volo Andata</strong> :
+              Y1234X, ore 9:30 da Milano Malpensa
+            </li>
+            <li>
+              <strong>Volo Ritorno</strong> :
+              Y1236X, ore 18:30 da London Heathrow
+            </li>
+          </ol>
+        </li>
+      </ul>
+      <hr>
+    </section>
   </main>
 </body>
 </html>
